fixed spacing, navbar, and alignment

--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,49 @@
+body{
+    margin: 0;
+    padding: 0;
+    color: white;
+    font-size: 24px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+a{
+    color: white;
+    text-decoration: none;
+}
+
 #navbar{
     display: flex;
-    height: 75px;
-    position: sticky;
+    position: fixed;
     top: 0px;
     left: 0px;
     width: 100%;
     z-index: 8;
-    background-color: yellow;
+    background-color: orange;
 }
 #navbar img{
     height: 75px;
+    padding: 7px;
 }
-#nav_btns{
-    margin-left: auto;
-    justify-content:center;
+.nav_btns{
+    display: flex;
+    margin: 0;
+    padding: 0;
+    justify-content: space-around;
     align-items: center;
+    margin-left: auto;
+
+}
+.nav_list{
+    margin: 40px;
+    list-style-type: none;
 }
 
 .hero{
+    display: flex;
     position: relative;
     width: 100vw;
-    height: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
 }
 .hero::before{
     content: "";
@@ -29,7 +52,7 @@
     left: 0%;
     width: 100%;
     height: 100%;
-    background-image: url(images/food.jpeg);
+    background-image: url(images/hero_bg.JPG);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -37,5 +60,31 @@
 }
 .hero_content{
     text-align: center;
-    position: absolute;
+    position: relative;
+    color: white;
+    margin: 0.625rem;
+}
+.hero_title{
+    font-size: 3rem;
+    font-weight: 600;
+    margin-bottom: 0;
+}
+.hero_sub{
+    font-size: 2rem;
+    font-weight: 200;
+    margin-top: 1rem;
+}
+
+
+#contact{
+    display:block;
+}
+.columns{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.column{
+    flex:1;
+    text-align: center;
 }
